@@ -1,3 +1,8 @@
+2011-11-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_sig/include/yarp/sig/Image.h: add const version
+	of ImageOf<T>::safePixel
+
 2011-11-16  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/libYARP_OS/include/yarp/os/Port.h: add resume() method
